핸드폰 화면 수정

--- a/scene1.html
+++ b/scene1.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>핸드폰 화면</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-
 <body>
     <div class="screen">
-        <button class="button">1</button>
+        <button class="button" onclick="window.open('scene2.html' )">데스크탑</button>
     </div>
     <div class="screen2">
-        <button class="button">1</button>
-        <button class="button">2</button>
+        <button class="button" onclick="location.href='scene3.html'">문자</button>
+        <button class="button" onclick="location.href='scene4.html'">전화</button>
         <button class="button">3</button>
         <button class="button">4</button>
     </div>
 </body>
-
 </html>
