--- a/scene1.html
+++ b/scene1.html
@@ -9,6 +9,7 @@
 <body>
     <div class="screen">
         <button class="button" onclick="window.open('scene2.html' )">데스크탑</button>
+        테스트입니다
     </div>
     <div class="screen2">
         <button class="button" onclick="location.href='scene3.html'">문자</button>
