--- a/desktop_search.html
+++ b/desktop_search.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>데스크탑 화면</title>
+    <title>데스크탑 검색창</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div class="screen3">
-        <button class="search"> 검색 </button>
-        <button class="trash"> 휴지통 </button>
+        <div class="search_scr">
+            <div class="search_bar"></div>
+        </div>
     </div>
     <div class="screen4">
     </div>
