휴대폰 변경

--- a/scene3.html
+++ b/scene3.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>문자 화면</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="phone_style.css">
 </head>
 <body>
-    <div class="screen">
+    <div class="screen3">
         
     </div>
-    <div class="screen2">
-        <button class="button">1</button>
-        <button class="button">2</button>
-        <button class="button"onclick="location.href='scene1.html'">뒤로가기</button>
+    <div class="screen4">
+        <button class="button2"onclick="location.href='scene1.html'"><img src="img\home.png" alt="홈"></button>
     </div>
 </body>
 </html>
