--- a/scene1.html
+++ b/scene1.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>핸드폰 화면</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="phone_style.css">
 </head>
 <body>
-    <div class="screen">
-        <button class="button" onclick="window.open('scene2.html' )">데스크탑</button>
-        테스트입니다
+    <div class="screen1">
+        <button class="button1" onclick="window.open('scene2.html' )"><img src="img\desktop.png" alt="데스크탑으로"></button>
     </div>
     <div class="screen2">
-        <button class="button" onclick="location.href='scene3.html'">문자</button>
-        <button class="button" onclick="location.href='scene4.html'">전화</button>
-        <button class="button">3</button>
-        <button class="button">4</button>
+        <button class="button1" onclick="location.href='scene3.html'"><img src="img\sms.png" alt="문자"></button>
+        <button class="button1" onclick="location.href='scene4.html'"><img src="img\call.png" alt="전화"></button>
+        <button class="button1" onclick="window.open('https://www.instagram.com/')"><img src="img\sns.png" alt="sns"></button>
+        <button class="button1" onclick="window.open('https://www.google.com/maps/')"><img src="img\map.png" alt="지도"></button>
     </div>
 </body>
 </html>
