--- a/web-O-main/desktop_search.html
+++ b/web-O-main/desktop_search.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <div class="screen3">
-        <div class="trash_scr">
-            <div class="search_bar"></div>
+        <div class="search_scr">
+            <div class="qbutton_search"onclick="location.href='scene2.html'"><img src="img\quit.png"></div>
+            <div class ="search_bar"></div>
         </div>
     </div>
     <div class="screen4">
