--- a/web-O-main/desktop_trash.html
+++ b/web-O-main/desktop_trash.html
@@ -10,6 +10,7 @@
     <div class="screen3">
 
         <div class="trash_scr">
+            <div class="qbutton"onclick="location.href='scene2.html'"><img src="img\quit.png"></div>
             <div class="button"></div>
             <div class="button"></div>
             <div class="button"></div>
