--- a/scene2.html
+++ b/scene2.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="screen3">
-        <button class="search"> 검색 </button>
-        <button class="trash"> 휴지통 </button>
+        <button class="search" onclick="location.href='desktop_search.html'"><img src="img\search.png"> 검색 </button>
+        <button class="trash" onclick="location.href='desktop_trash.html'"><img src="img\trash.png"> 휴지통 </button>
     </div>
     <div class="screen4">
     </div>
