--- a/desktop_search.html
+++ b/desktop_search.html
@@ -9,7 +9,8 @@
 <body>
     <div class="screen3">
         <div class="search_scr">
-            <div class="search_bar"></div>
+            <div class="qbutton_search"onclick="location.href='scene2.html'"><img src="img\quit.png"></div>
+            <div class ="search_bar"></div>
         </div>
     </div>
     <div class="screen4">
