--- a/desktop_trash.html
+++ b/desktop_trash.html
@@ -11,10 +11,10 @@
 
         <div class="trash_scr">
             <div class="qbutton"onclick="location.href='scene2.html'"><img src="img\quit.png"></div>
-            <div class="button"></div>
-            <div class="button"></div>
-            <div class="button"></div>
-            <div class="button"></div>
+            <div class="filebutton"><img src="img\file.png"></div>
+            <div class="filebutton"><img src="img\file.png"></div>
+            <div class="filebutton"><img src="img\file.png"></div>
+            <div class="filebutton"><img src="img\file.png"></div>
         </div>
     </div>
     <div class="screen4">
