--- a/desktop_trash.html
+++ b/desktop_trash.html
@@ -18,6 +18,7 @@
         </div>
     </div>
     <div class="screen4">
+        <div class="bell"><img src="img\bell.png"></div>
     </div>
 </body>
 </html>
