--- a/scene2.html
+++ b/scene2.html
@@ -12,6 +12,7 @@
         <button class="trash" onclick="location.href='desktop_trash.html'"><img src="img\trash.png"> 휴지통 </button>
     </div>
     <div class="screen4">
+        <div class="bell"><img src="img\bell.png"></div>
     </div>
 </body>
 </html>
