--- a/desktop_search.html
+++ b/desktop_search.html
@@ -14,6 +14,7 @@
         </div>
     </div>
     <div class="screen4">
+        <div class="bell"><img src="img\bell.png"></div>
     </div>
 </body>
 </html>
