--- a/scene2.html
+++ b/scene2.html
@@ -10,6 +10,7 @@
     <div class="screen3">
         <button class="search" onclick="location.href='desktop_search.html'"><img src="img\search.png"> 검색 </button>
         <button class="trash" onclick="location.href='desktop_trash.html'"><img src="img\trash.png"> 휴지통 </button>
+        <button class="go_phone" onclick="location.href='scene1.html'"><img src="img\go_phone.png"> </button>
     </div>
     <div class="screen4">
         <div class="bell"><img src="img\bell.png"></div>
